# cibr_img_procesing

./: CMakeLists.txt  README.md  package.xml  simple_grasp.py  simple_objs_node.py
cv_utils/: bgs_boundingbox.py  contour_test.py  cv_util_node.py  filter_bounding_box.py  manual_roi_tracker.py  model.py
data/: grasp_data.csv  grasp_data_results.csv
launch/: bounding_box.launch
ui/: mouse_handler.py
