<?xml version="1.0"?>
<package format="2">
  <name>cibr_img_processing</name>
  <version>0.2.0</version>
  <description>Image processing tools for CIBR lab</description>
  <maintainer email="oakyildiz@wpi.edu">Ozan Akyildiz</maintainer>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <author email="oakyildiz@wpi.edu">Ozan Akyildiz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>cv2</exec_depend>

  <depend>sensor_msgs</depend>
  <!--depend>reflex_msgs</depend-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
